--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/MrLuis-WebMaster/LandingBookmark",  
+  "homepage": "https://github.com/MrLuis-WebMaster.github.io/LandingBookmark",  
   "name": "my-app-bookmark",
   "version": "0.1.0",
   "private": true,
